# white-palace-ai-voice-agent

./: .env.docker.example  .env.production.example  .gitignore  DOCKER_DEPLOYMENT.md  Dockerfile.agent  Dockerfile.backend  Dockerfile.frontend  EC2_DEPLOYMENT.md  UBUNTU_DEPLOYMENT.md  agent_white_palace.py  deploy_aws.sh  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  test_backend.py  test_bedrock.py
agent/: agent_white_palace.py
backend/: .gitignore  agent.py  agent_llm.py  agent_white_palace_local.py  app.py  prompt.py  requirements.txt
backend/config/: constants.py  database.py  restaurant_config.py
backend/middleware/: error_handler.py  validators.py
backend/routes/: admin_auth.py  agent.py  customer_auth.py  menu.py  orders.py  payments.py  reservations.py  twilio_webhooks.py  voice.py  voice_pipeline.py
backend/utils/: helpers.py  livekit_service.py  twilio_service.py  websocket_service.py
database/: init_db.sh  populate_db.sh  schema.sql  seed_menu_items.sql
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  index.css  main.jsx
frontend/src/components/: AdminLogin.jsx
frontend/src/contexts/: AuthContext.jsx
frontend/src/layouts/: Layout.jsx
frontend/src/pages/: Admin.jsx  Home.jsx  Login.jsx  Menu.jsx  Order.jsx  Reservations.jsx  SignUp.jsx  VoiceAgent.jsx
