[project]
name = "white-palace-ai-voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "livekit-plugins-anthropic>=1.3.10",
    "livekit-plugins-aws[realtime]>=1.3.10",
    "livekit-plugins-cartesia>=1.3.10",
    "livekit-plugins-deepgram>=1.3.10",
    "livekit-plugins-elevenlabs>=1.3.10",
    "livekit-plugins-google>=1.3.10",
    "livekit-plugins-groq>=1.3.10",
    "livekit-plugins-openai>=1.3.10",
    "livekit-plugins-silero>=1.3.10",
    "livekit-plugins-turn-detector>=1.3.10",
]
